.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: obvestila
  namespace: production
  labels:
    app: obvestila
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: obvestila
